# chunky-zip

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
chunky_zip/: __init__.py  compressed_zip.py  storage_zip.py
tests/: test_basic.py  utils.py
