[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chunky-zip"
version = "0.1.0"
description = "A Python package for chunky zip operations."
authors = [
    { name="Adam Jakubowski", email="ajakubo1@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.isort]
profile = "black"